# multi_human_pose_estimation

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
node/: img_listener.py  img_publish.py
src/keras_Realtime_Multi_Person_Pose_Estimation/: config_reader.py  predict.py
